--- a/kubernetes/react-deployment.yaml
+++ b/kubernetes/react-deployment.yaml
@@ -89,13 +89,15 @@ kind: Service
 metadata:
   name: react-service
 spec:
+  type: NodePort
   selector:
     app: react-app
   ports:
-  - protocol: TCP
-    port: 80
+  - name: http
+    port: 8082
     targetPort: 80
-  type: NodePort
+    nodePort: 30001
+    protocol: TCP
 
 ---
 # fastapi-deployment.yaml
@@ -126,13 +128,15 @@ kind: Service
 metadata:
   name: fastapi-service
 spec:
+  type: NodePort
   selector:
     app: fastapi
   ports:
-  - protocol: TCP
-    port: 8000
+  - name: http2
+    port: 8081
     targetPort: 8000
-  type: NodePort
+    nodePort: 30002
+    protocol: TCP
 
 
 
